Modified navbar on mobiles. Fixed buttons in projects on mobile

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,6 +1,7 @@
 .app-button {
   border: 1px solid black;
   outline: none;
+  cursor: pointer;
   &:disabled {
     background: $theme_third_color !important;
     color: white;
